Criando table, entitie, repository, useCase e routes de Users
